--- a/css/kasper.css
+++ b/css/kasper.css
@@ -673,3 +673,39 @@ header nav .form i {
   top: -15px;
 }
 /* End Skills */
+/* Start Quote */
+.quote {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-image: url("../images/quote.jpg");
+  background-size: cover;
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.quote::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 75%);
+}
+.quote .container {
+  position: relative;
+}
+.quote q {
+  font-size: 30px;
+  margin-bottom: 20px;
+  display: block;
+}
+q::before {
+  font-family: "Font Awesome 5 Free";
+  content: open-quote;
+}
+q::after {
+  font-family: "Font Awesome 5 Free";
+  content: close-quote;
+}
+/* End Quote */
